// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default 1`] = `
<DocumentFragment>
  <div
    class="input-code"
  >
    <input
      autocomplete="off"
      class="input-code__input"
      max="9"
      maxlength="6"
      min="0"
      type="text"
      value=""
    />
    <input
      autocomplete="off"
      class="input-code__input"
      max="9"
      maxlength="1"
      min="0"
      type="text"
      value=""
    />
    <input
      autocomplete="off"
      class="input-code__input"
      max="9"
      maxlength="1"
      min="0"
      type="text"
      value=""
    />
    <input
      autocomplete="off"
      class="input-code__input"
      max="9"
      maxlength="1"
      min="0"
      type="text"
      value=""
    />
    <input
      autocomplete="off"
      class="input-code__input"
      max="9"
      maxlength="1"
      min="0"
      type="text"
      value=""
    />
    <input
      autocomplete="off"
      class="input-code__input"
      max="9"
      maxlength="1"
      min="0"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`disabled 1`] = `
<DocumentFragment>
  <div
    class="input-code"
  >
    <input
      autocomplete="off"
      class="input-code__input"
      disabled=""
      max="9"
      maxlength="6"
      min="0"
      type="text"
      value=""
    />
    <input
      autocomplete="off"
      class="input-code__input"
      disabled=""
      max="9"
      maxlength="1"
      min="0"
      type="text"
      value=""
    />
    <input
      autocomplete="off"
      class="input-code__input"
      disabled=""
      max="9"
      maxlength="1"
      min="0"
      type="text"
      value=""
    />
    <input
      autocomplete="off"
      class="input-code__input"
      disabled=""
      max="9"
      maxlength="1"
      min="0"
      type="text"
      value=""
    />
    <input
      autocomplete="off"
      class="input-code__input"
      disabled=""
      max="9"
      maxlength="1"
      min="0"
      type="text"
      value=""
    />
    <input
      autocomplete="off"
      class="input-code__input"
      disabled=""
      max="9"
      maxlength="1"
      min="0"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;
